--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bson": ">=1.0.5",
     "ejs": "^3.1.8",
     "express": "^4.13.3",
+    "moment": "^2.29.4",
     "mongodb": "^3.3.4"
   },
   "devDependencies": {
